[package]
name = "glutin_x11_sym"
version = "0.1.0"
authors = ["The glutin contributors", "Freya Gentz <zegentzy@protonmail.com>"]
edition = "2018"
description = "Types shared between winit and sister crates."
keywords = ["windowing", "opengl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin_x11_sym"
documentation = "https://docs.rs/glutin_x11_sym"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
x11-dl = "2.18.3"
lazy_static = "1.4.0"
winit_types = { version = "0.1.0", path = "../winit_types" }
parking_lot = "0.10"
log = "0.4"
